apps/istio/manifests/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: istio-ingress
  namespace: istio-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`argocd.localhost`)
    kind: Rule
    services:
    - name: istio-ingressgateway
      namespace: istio-system
      port: 80
  - match: Host(`goldilocks.localhost`)
    kind: Rule
    services:
      - name: istio-ingressgateway
        namespace: istio-system
        port: 80
  - match: Host(`rabbitmq.localhost`)
    kind: Rule
    services:
      - name: istio-ingressgateway
        namespace: istio-system
        port: 80
  - match: Host(`grafana.localhost`)
    kind: Rule
    services:
      - name: istio-ingressgateway
        namespace: istio-system
        port: 80
